// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/frtq/paradox/conservative_white.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading_third_person - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      Maybe just hire qualified candidates
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without Paradox data 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className="fallback"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without badge 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading fallbacks renders component without video 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className="fallback"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </div>
  </div>
  <div
    className="meaning"
  >
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "archetype_description_html",
        }
      }
    />
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/frtq/paradox/conservative_white.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders component with headers 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        className={null}
        src="https://cdn.traitify.com/frtq/paradox/conservative_white.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading - {\\"deck_name\\":\\"Big Five\\",\\"personality\\":\\"<span>Cohort</span>\\"}",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/paradox/upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if deck not ready 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if disabled 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if no archetype 1`] = `null`;

exports[`Paradox.PersonalityArchetypeHeading renders nothing if results not ready 1`] = `null`;
